Reorganización de las carpetas

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
   <meta name="keywords" content="Bikinis, Bikinis Rosario, Enterizas, Mallas, Verano 2022, bikinis para niñas">
 
   <!--favicon-->
-  <link rel="shortcut icon" href="../imagenes/logo.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="../src/images/logo.jpeg" type="image/x-icon">
 
   <!--CSS-->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../src/styles/scss/style.css">
 
   <!--bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,7 +33,7 @@
   <!-- Header -->
   <header class="container-fluid top-0">
     <ul class="nav nav-pills mb-3 py-3 container" id="pills-tab" role="tablist">
-      <a class="navbar-brandt"> <img src="../imagenes/BIKINI.TWINS (4).png" alt="logo"></a>
+      <a class="navbar-brandt"> <img src="../src/images/BIKINI.TWINS (4).png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -68,13 +68,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner w-100">
           <div class="carousel-item active">
-            <img src="../imagenes/pexels-jayro-cerqueira-da-silva-5850444.jpg" class="d-block w-100" alt="carousel2">
+            <img src="../src/images/pexels-jayro-cerqueira-da-silva-5850444.jpg" class="d-block w-100" alt="carousel2">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/pexels-jess-loiterton-5231688.jpg" class="d-block w-100" alt="carousel3">
+            <img src="../src/images/pexels-jess-loiterton-5231688.jpg" class="d-block w-100" alt="carousel3">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/carousel1.jpg" class="d-block w-100" alt="carousel1">
+            <img src="../src/images/carousel1.jpg" class="d-block w-100" alt="carousel1">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -91,43 +91,43 @@
 
       <br>
 
-      <section>
+      <section id="section-home">
         <div class="container">
           <div class="row">
             <div class="col-md-8">
               <!-- Card -->
               <div class="card card-lg justify-content-end bg-cover bg-cover-principal" style="width: 100%;">
-                <img src="../imagenes/pexels-jess-loiterton-5232657.jpg" alt="">
+                <img src="../src/images/pexels-jess-loiterton-5232657.jpg" alt="">
               </div>
             </div>
 
             <div class="col-md-3">
               <!-- Card -->
-              <a class="card justify-content: center bg-cover bg-cover-principal">
-                <img src="../imagenes/pexels-jess-loiterton-5233084.jpg" alt="">
+              <h3 class="card justify-content: center bg-cover bg-cover-principal">
+                <img src="../src/images/pexels-jess-loiterton-5233084.jpg" alt="">
                 <br>
                 <h4 class="card-title">
                   2022 GIRLS SUMMER COLLECTION
                 </h4>
-              </a>
+              </h3>
             </div>
 
             <!--Cards-->
-            <div class="card-group imagenes col-md-11">
+            <div class="card-group src/images col-md-11">
               <div class="card">
-                <img src="../imagenes/corpinios/corpinio6.jpeg" class="card-img-top" alt="...">
+                <img src="../src/images/corpinios/corpinio6.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">CORPIÑOS</h5>
                 </div>
               </div>
               <div class="card">
-                <img src="../imagenes/bombachas/bombacha1.jpeg" class="card-img-top" alt="...">
+                <img src="../src/images/bombachas/bombacha1.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">BOMBACHAS</h5>
                 </div>
               </div>
               <div class="card">
-                <img src="../imagenes/enterizas/enteriza2.jpeg" class="card-img-top" alt="...">
+                <img src="../src/images/enterizas/enteriza2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">ENTERIZAS</h5>
                 </div>
@@ -291,8 +291,8 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
     
-    <script src="../javascript/carrito.js"></script>
-    <script src="../javascript/productos.js"></script>
-  <script src="../javascript/contacto.js"></script>
+    <script src="../src/javascript/carrito.js"></script>
+    <script src="../src/javascript/productos.js"></script>
+  <script src="../src/javascript/contacto.js"></script>
 </body>
 </html>
